fix(footer): Font & mobile wrap

--- a/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/layout/_footer.scss
+++ b/vertigo_starts_eu/static/vertigo_starts_eu/src/sass/layout/_footer.scss
@@ -22,6 +22,7 @@ $module: ".footer";
 
 #{$module} {
 	background-color: #000F24;
+	font-family: Oswald,sans-serif;
 
 	display: flex;
 	justify-content: center;
@@ -36,9 +37,17 @@ $module: ".footer";
 		margin: 0 10px;
 	}
 
+	& .copyright {
+		text-align: center;
+	}
+
 	& .socials {
 		img {
 			width: 50px;
 		}
+	}
+
+	@media (max-width: 600px) {
+		flex-wrap: wrap;
 	}
 }
